# ModelProof-Technologies

./: .env.example  .gitignore  .replit  CHARACTER_LIMIT_FEATURE.md  DEPLOY_NOW.md  EMAIL_SETUP.md  LOGGING_GUIDE.md  LOG_EXAMPLE.md  README.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts  test_bias_improvements.py  theme.json  vercel.json
api/: .gitignore  API_ENDPOINTS.md  BIAS_DETECTION_FIX.md  BIAS_DETECTION_TEST_REPORT.md  CRITICAL_FIXES_SUMMARY.md  DASHBOARD_GUIDE.md  DASHBOARD_TEST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  ENHANCED_DETECTION_TEST_REPORT.md  ENVIRONMENT_VARIABLES.md  MIGRATION_GUIDE.md  README.md  README_TIERED_LIMITS.md  SUBTLE_BIAS_DETECTION.md  TEST_RESULTS.md  TIERED_CHARACTER_LIMITS.md  VERCEL_SETUP.md  admin.js  careers.js  contact.js  contact.ts  dashboard.js  docs.js  fix.js  index.js  package-lock.json  package.json  public.js  scan.js  server.js  test-api.sh  test.js  test.ts
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-wid-1762329997583_1762329997584.txt  Pasted--ModelProof-AI-Focused-Color-Scheme-Update-Primary-Color-Palette-Core-Blues-Primary-1739468199415.txt  Pasted--ModelProof-Website-Updates-Color-Scheme-Updates-Replace-current-colors-with-Primary-De-1739406715679.txt  Pasted--Privacy-Policy-Last-updated-July-10-2025-Introduction-ModelProof-Technologies-LLC-we-1752134345596_1752134345597.txt  Pasted--error-Bias-detection-service-error-details-Request-failed-with-status-code-401-1762329133484_1762329133485.txt  (+22 more)
(+91 files in other folders)
