[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.4",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "spacy>=3.8.7",
    "uvicorn>=0.38.0",
]
